[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-twikit-tools"
version = "1.0.0"
description = "Aewsome Twitter MCP using Twikit"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "@dami16z", twitter = "@dami16z" }
]
dependencies = [
    "fastmcp",
    "twikit",
    "requests",
]

[project.urls]
Homepage = "https://github.com/unlimitbladeworks/awesome-mcp-twikit"

[project.scripts]
mcp-twikit-tools = "mcp_twikit_tools.twitter:mcp.run"